<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".OnBoardingScreen">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/skip_btn"
        style="@style/Widget.Material3.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:drawableEnd="@drawable/ic_outline_done_all_24"
        android:drawableTint="@color/primary_green"
        android:fontFamily="@font/poppins_semibold"
        android:onClick="skip"
        android:text="@string/skip_txt"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/skip_btn" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/chip_1"
            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/primary_white"
            android:text="@string/swipe_txt"
            android:textColor="@color/primary_green"
            android:visibility="visible"
            app:icon="@drawable/ic_outline_navigate_next_24"
            app:iconGravity="end" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/get_started_btn"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_45sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/primary_green"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/get_start"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:transitionName="transition_get_started"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/slider_dots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingTop="20dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_btn"
            style="@style/Widget.Material3.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="10dp"
            android:drawableEnd="@drawable/ic_outline_navigate_next_24"
            android:drawableTint="@color/primary_green"
            android:fontFamily="@font/poppins_semibold"
            android:onClick="next"
            android:text="@string/next_txt"
            android:textSize="18sp"
            android:visibility="visible" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>